--- a/QSPGL/test-output/emailable-report.html
+++ b/QSPGL/test-output/emailable-report.html
@@ -8,43 +8,25 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">73</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test Runner 1</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">102</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test Runner 2</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">98</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">12</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">200</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">listenerPractice.TestClass</td><td><a href="#m0">test1</a></td><td rowspan="1">1723249997825</td><td rowspan="1">10</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Runner 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">distributedParallel.Test1</td><td><a href="#m0">demo1</a></td><td rowspan="1">1725654873534</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">demo2</a></td><td rowspan="1">1725654873540</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="2">distributedParallel.Test2</td><td><a href="#m2">demo1</a></td><td rowspan="1">1725654873513</td><td rowspan="1">8</td></tr><tr class="passedodd"><td><a href="#m3">demo2</a></td><td rowspan="1">1725654873526</td><td rowspan="1">2</td></tr><tr class="passedeven"><td rowspan="2">distributedParallel.Test3</td><td><a href="#m4">demo1</a></td><td rowspan="1">1725654873492</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m5">demo2</a></td><td rowspan="1">1725654873508</td><td rowspan="1">1</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test Runner 2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">distributedParallel.Test1</td><td><a href="#m6">demo1</a></td><td rowspan="1">1725654873527</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m7">demo2</a></td><td rowspan="1">1725654873532</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="2">distributedParallel.Test2</td><td><a href="#m8">demo1</a></td><td rowspan="1">1725654873516</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m9">demo2</a></td><td rowspan="1">1725654873520</td><td rowspan="1">3</td></tr><tr class="passedeven"><td rowspan="2">distributedParallel.Test3</td><td><a href="#m10">demo1</a></td><td rowspan="1">1725654873492</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m11">demo2</a></td><td rowspan="1">1725654873506</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">listenerPractice.TestClass#test1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.fail(Assert.java:106)
-	at listenerPractice.TestClass.test1(TestClass.java:12)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Runner 1</h2><h3 id="m0">distributedParallel.Test1#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">distributedParallel.Test1#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">distributedParallel.Test2#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">distributedParallel.Test2#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">distributedParallel.Test3#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">distributedParallel.Test3#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Runner 2</h2><h3 id="m6">distributedParallel.Test1#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">distributedParallel.Test1#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">distributedParallel.Test2#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">distributedParallel.Test2#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">distributedParallel.Test3#demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">distributedParallel.Test3#demo2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
