--- a/QSPGL/test-output/old/Suite/methods.html
+++ b/QSPGL/test-output/old/Suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6be399">  <td>24/08/08 06:04:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo1()[pri:0, instance:distributedParallel.Test3@78123e82]">demo1</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/08/08 06:04:15</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo1()[pri:0, instance:distributedParallel.Test1@169e6180]">demo1</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>24/08/08 06:04:15</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo2()[pri:0, instance:distributedParallel.Test2@2fb3536e]">demo2</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="6be399">  <td>24/08/08 06:04:15</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo2()[pri:0, instance:distributedParallel.Test3@78123e82]">demo2</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/08/08 06:04:15</td>   <td>92</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo2()[pri:0, instance:distributedParallel.Test1@169e6180]">demo2</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>24/08/08 06:04:15</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo1()[pri:0, instance:distributedParallel.Test2@2fb3536e]">demo1</td> 
-  <td>TestNG-tests-1@353158645</td>   <td></td> </tr>
-<tr bgcolor="859c86">  <td>24/08/08 06:04:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test6.demo1()[pri:0, instance:distributedParallel.Test6@47e2e487]">demo1</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
-<tr bgcolor="649a64">  <td>24/08/08 06:04:15</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test5.demo1()[pri:0, instance:distributedParallel.Test5@201a4587]">demo1</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
-<tr bgcolor="649a64">  <td>24/08/08 06:04:15</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test5.demo2()[pri:0, instance:distributedParallel.Test5@201a4587]">demo2</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
-<tr bgcolor="859c86">  <td>24/08/08 06:04:15</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test6.demo2()[pri:0, instance:distributedParallel.Test6@47e2e487]">demo2</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
-<tr bgcolor="a8adcf">  <td>24/08/08 06:04:15</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test4.demo2()[pri:0, instance:distributedParallel.Test4@61001b64]">demo2</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
-<tr bgcolor="a8adcf">  <td>24/08/08 06:04:15</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test4.demo1()[pri:0, instance:distributedParallel.Test4@61001b64]">demo1</td> 
-  <td>TestNG-tests-2@1927477451</td>   <td></td> </tr>
+<tr bgcolor="b9f5a4">  <td>24/09/07 02:04:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo2()[pri:0, instance:distributedParallel.Test1@6da21078]">demo2</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>24/09/07 02:04:33</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo2()[pri:0, instance:distributedParallel.Test3@28f3b248]">demo2</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>24/09/07 02:04:33</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo1()[pri:0, instance:distributedParallel.Test2@f736069]">demo1</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>24/09/07 02:04:33</td>   <td>-50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo1()[pri:0, instance:distributedParallel.Test3@28f3b248]">demo1</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>24/09/07 02:04:33</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo2()[pri:0, instance:distributedParallel.Test2@f736069]">demo2</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="b9f5a4">  <td>24/09/07 02:04:33</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo1()[pri:0, instance:distributedParallel.Test1@6da21078]">demo1</td> 
+  <td>TestNG-tests-1@1289618672</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>24/09/07 02:04:33</td>   <td>-50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo1()[pri:0, instance:distributedParallel.Test3@7bab3f1a]">demo1</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
+<tr bgcolor="b9f5a4">  <td>24/09/07 02:04:33</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo1()[pri:0, instance:distributedParallel.Test1@23c30a20]">demo1</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>24/09/07 02:04:33</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo1()[pri:0, instance:distributedParallel.Test2@437da279]">demo1</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>24/09/07 02:04:33</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.demo2()[pri:0, instance:distributedParallel.Test2@437da279]">demo2</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
+<tr bgcolor="b9f5a4">  <td>24/09/07 02:04:33</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.demo2()[pri:0, instance:distributedParallel.Test1@23c30a20]">demo2</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>24/09/07 02:04:33</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.demo2()[pri:0, instance:distributedParallel.Test3@7bab3f1a]">demo2</td> 
+  <td>TestNG-tests-2@680832721</td>   <td></td> </tr>
 </table>
