--- a/QSPGL/test-output/old/Suite/toc.html
+++ b/QSPGL/test-output/old/Suite/toc.html
@@ -9,7 +9,7 @@
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>6 classes</a></td>
+<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
 <td>12 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
@@ -22,16 +22,16 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test runner 1 (6/0/0)</td><td valign='top' align='right'>
-  <a href='Test runner 1.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Test Runner 1 (6/0/0)</td><td valign='top' align='right'>
+  <a href='Test Runner 1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Test runner 2 (6/0/0)</td><td valign='top' align='right'>
-  <a href='Test runner 2.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Test Runner 2 (6/0/0)</td><td valign='top' align='right'>
+  <a href='Test Runner 2.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
